#136 fixed and updated swagger documentation
