# backend/internal/api/handlers/weather_handler.go
@@ -19,11 +19,11 @@ type WeatherResponse struct {
 }
 
 // WeatherResponse represents the weather response payload
-// @Description Get weather information
-// @Produce json
-// @Success 200 {object} WeatherResponse
-// @Failure 500 {string} string "Failed to fetch weather data"
-// @Router /api/weather [get]
+//	@Description	Get weather information
+//	@Produce		json
+//	@Success		200	{object}	WeatherResponse
+//	@Failure		500	{string}	string	"Failed to fetch weather data"
+//	@Router			/api/weather [get]
 // handler for GET request to /api/weather
 func WeatherHandler(w http.ResponseWriter, r *http.Request) {
 	data, err := GetWeatherData();
